Changes in Version 0.1-4

  o  Many of the function names were updated using a more explicit naming
     convention.

  o  Removed Tcl/Tk dialog boxes for file and directory selection. Default
     directory arguments are the working directory and file path names must be
     passed as arguments.

  o  Fixed calculation of the number of samples above the reporting limit
     (n_above_rl); previous value did not include the number of estimated (E)
     samples.

  o  Plot legends show p-value as less than 0.001; previously these labels were
     represented as "p-value = 0.000".

  o  Nonparametric regression is prevented when NADA::cenfit function results in
     warnings.

  o  Warn if site ids in configuration files do not match ids in the data file.

  o  Added a new function MergePDFs, combines PDF files into a new file.