@@ -1,6 +1,6 @@
 Package: Trends
 Version: 0.1-4
-Date: 2014-01-24
+Date: 2014-02-12
 Title: Trend analysis of Monitoring Network Data
 Author: Jason C. Fisher and Linda C. Davis
 Maintainer: Jason C. Fisher <jfisher@usgs.gov>
