@@ -7,7 +7,7 @@ ReadParConfig <- function(file, sep="\t", draw.legend=FALSE) {
                     stringsAsFactors=FALSE, comment.char="", row.names=1)
 
   if (draw.legend) {
-    windows(width=5, height=10, pointsize=12)
+    dev.new(width=5, height=10, pointsize=12)
     plot.new()
     lwd <- 0.5 * (96 / (6 * 12))
     legend(x="center", obj$Name, pch=obj$pch, col=obj$col, pt.bg=obj$bg, xpd=NA,
