@@ -1,14 +1,13 @@
-\name{OpenGraphicsDevice}
+\name{OpenDevice}
 
-\alias{OpenGraphicsDevice}
+\alias{OpenDevice}
 
 \title{Open Graphics Device}
 
 \description{This function starts the device driver for producing graphics.}
 
 \usage{
-OpenGraphicsDevice(path.out, file.name, gr.type,
-                   w = 8.5, h = 11, p = 12, png.res = 300)
+OpenDevice(path.out, file.name, gr.type, w = 8.5, h = 11, p = 12, png.res = 300)
 }
 
 \arguments{
@@ -16,19 +15,22 @@ OpenGraphicsDevice(path.out, file.name, gr.type,
 \item{file.name}{character; the name of the graphics file and excluding
   a file extension.}
 \item{gr.type}{character; the name of graphics driver, either
-  \code{"pdf"}, \code{"postscript"}, \code{"png"}, or \code{"windows"}.}
+  \code{"pdf"}, \code{"postscript"}, \code{"png"}, or \code{"windows"} (normal
+  screen device).}
 \item{w, h}{numeric; the (nominal) width and height of the canvas of the
   plotting window in inches. Default is \code{8.5} and \code{11}, respectively.}
 \item{p}{numeric; the default point size of plotted text, its default is
   \code{12}.}
 \item{png.res}{numeric; the nominal resolution in points per inch (ppi)
-  which will be recorded in the PNG file, its default is \code{300} ppi
-  to set the size of text and line widths.}
+  which will be recorded in the
+  \href{http://en.wikipedia.org/wiki/Portable_Network_Graphics}{PNG} file, its
+  default is \code{300} ppi to set the size of text and line widths.}
 }
 
 \details{
-A \code{"postscript"} graphics device produces an EPS file and
-is recommended for producing figures of publication quality.
+A \code{"postscript"} graphics device produces an
+\href{http://en.wikipedia.org/wiki/Encapsulated_PostScript}{EPS} file and is
+recommended for producing figures of publication quality.
 }
 
 \value{A plot device is opened.}
@@ -36,12 +38,9 @@ is recommended for producing figures of publication quality.
 \author{J.C. Fisher}
 
 \seealso{
-\code{\link{windows}}, \code{\link{pdf}}, \code{\link{png}},
-\code{\link{postscript}}
+\code{\link{pdf}}, \code{\link{png}}, \code{\link{postscript}}
 }
 
-\examples{\donttest{
-OpenGraphicsDevice(getwd(), "fig01", "pdf")
-}}
+\examples{\donttest{OpenDevice(getwd(), "fig01", "pdf")}}
 
 \keyword{misc}
